changed bg,font, style etc

--- a/Habit-zen/index.html
+++ b/Habit-zen/index.html
@@ -30,7 +30,9 @@
         <div id="progress"></div>
     </main>
     <footer>
-        <p>Stay consistent and stay healthy!</p>
+        <p>Stay consistent and motivated! </p>
+           <p> You are the creator of your own destiny!!!
+        </p>
     </footer>
     <script src="script.js"></script>
 </body>
