--- a/Habit-zen/index.html
+++ b/Habit-zen/index.html
@@ -2,13 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Habit Tracker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=5.0">
+    <title>HABIT ZEN</title>
+    <style>
+        header img {
+            display: block; /* Ensures the image is treated as a block element */
+            margin-left: 0; /* Aligns the logo to the left */
+            position: absolute; /* Optional: Use this to lock it in place */
+            top: 10px; /* Adjusts the space from the top */
+            left: 10px; /* Adjusts the space from the left */
+        }
+    </style>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Health Habit Tracker</h1>
+        <h1> HABIT ZEN</h1>
+            <img src="c:\Users\Administrator\Downloads\zen.jpeg" alt="Habit-Zen" width="120">
     </header>
     <main>
         <form id="habitForm">
